Fix alignnone and float clearings

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -960,10 +960,16 @@ main .inside {
 	p {
 		margin: 30px 0;
 	}
+	&:after {
+		clear: both;
+		content: "";
+		display: block;
+	}
 }
 
 .alignnone {
 	margin: 30px 0;
+	max-width: 100%;
 }
 
 .alignleft {
@@ -985,6 +991,9 @@ main .inside {
 .gallery-caption,
 .bypostauthor {
 	color: inherit;
+}
+.wp-caption {
+	max-width: 100%;
 }
 
 .hentry,
